# BCX2020

./: .gitignore  Bin auch da.md  README.md  README.tex.md
backend/: app.py  pyproject.toml  scheduler.py
data/: Netzeinspeisung_2019.csv  Solarenergie_Prognose_2019.csv  Windenergie_Prognose_2019.csv  renewData.csv
experimenting/: experimenting.ipynb  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
